# finbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: routeTree.gen.ts  styles.css
frontend/src/api/: client.ts
frontend/src/components/: command-palette.tsx  error-boundary.tsx  file-import.tsx  skeleton.tsx  toast-provider.tsx  tooltip.tsx
frontend/src/hooks/: queries.ts  useAuth.ts
frontend/src/routes/: __root.tsx  advisor.tsx  artifacts.tsx  db.tsx  debts.tsx  expenses.tsx  goals.tsx  guide.tsx  index.tsx  investments.tsx  login.tsx  muni-bonds.tsx  paycheck.tsx  projections.tsx  report.tsx  settings.tsx  social-security.tsx  tax.tsx
frontend/src/types/: index.ts
scripts/: bootstrap.sh  pull-model.sh
src/finbot/: config.py
src/finbot/analysis/: budget.py  categorizer.py  debts.py  expenses.py  goals.py  income.py  investments.py  muni_bonds.py  net_worth.py  paycheck.py  projections.py  rebalancer.py  savings_rate.py  social_security.py  subscriptions.py  tax_optimizer.py
src/finbot/api/: app.py  auth.py  deps.py  schemas.py
src/finbot/cli/: main.py
src/finbot/db/: database.py  seed.py
src/finbot/export/: csv_export.py  pdf_report.py
src/finbot/guide/: content.py
src/finbot/llm/: analyst.py  client.py  memory.py  prompts.py  response_models.py
tests/: conftest.py  test_analysis.py  verify_imports.py
(+50 files in other folders)
