[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finbot"
version = "0.1.0"
description = "Local offline LLM-powered financial analyst with Boglehead-guided advice"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "httpx>=0.27",
    "pdfplumber>=0.11",
    "pandas>=2.2",
    "ofxparse>=0.21",
    "python-Levenshtein>=0.25",
    "qrcode[pil]>=7.4",
    "python-dotenv>=1.0",
    "zeroconf>=0.131",
    "cryptography>=43.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
finbot = "finbot.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/finbot"]

[tool.ruff]
target-version = "py311"
src = ["src"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["llm: test requires Ollama to be running (skipped in CI)"]
